@@ -11,14 +11,14 @@
 from typing import Any, Dict, Iterable, List, Tuple
 
 from docutils import nodes
-from docutils.nodes import Node
+from docutils.nodes import Node, system_message
 
 from sphinx import addnodes
 from sphinx.domains import Domain
 from sphinx.environment import BuildEnvironment
 from sphinx.util import logging
 from sphinx.util import split_index_msg
-from sphinx.util.docutils import SphinxDirective
+from sphinx.util.docutils import ReferenceRole, SphinxDirective
 from sphinx.util.nodes import process_index_entry
 
 if False:
@@ -84,9 +84,33 @@ class IndexDirective(SphinxDirective):
         return [indexnode, targetnode]
 
 
+class IndexRole(ReferenceRole):
+    def run(self) -> Tuple[List[Node], List[system_message]]:
+        target_id = 'index-%s' % self.env.new_serialno('index')
+        if self.has_explicit_title:
+            # if an explicit target is given, process it as a full entry
+            title = self.title
+            entries = process_index_entry(self.target, target_id)
+        else:
+            # otherwise we just create a single entry
+            if self.target.startswith('!'):
+                title = self.title[1:]
+                entries = [('single', self.target[1:], target_id, 'main', None)]
+            else:
+                title = self.title
+                entries = [('single', self.target, target_id, '', None)]
+
+        index = addnodes.index(entries=entries)
+        target = nodes.target('', '', ids=[target_id])
+        text = nodes.Text(title, title)
+        self.set_source_info(index)
+        return [index, target, text], []
+
+
 def setup(app: "Sphinx") -> Dict[str, Any]:
     app.add_domain(IndexDomain)
     app.add_directive('index', IndexDirective)
+    app.add_role('index', IndexRole())
 
     return {
         'version': 'builtin',
